[workspace]
[package]
name = "reth-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "2.0.0", default-features = false, features = ["std", "unstable"] }
risc0-zkvm-platform = { version = "2.0.0", default-features = false, features = ["sys-getenv"] }
c-kzg = { version = "=1.0.3", features = ["risc0-ffi"] }

rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "4ceefdfb74c1691dd009168f0c7aec3d746ef8b3" }
bincode = "1.3.3"


[patch.crates-io]
blst = { git = "https://github.com/risc0/blst", tag = "blst/v0.3.14-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", branch = "p1.0.3" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", branch = "release/v0.6.0" }

[features]
risc0 = []
bento = []
