[workspace]
[package]
name = "reth-zisk"
version = "0.1.0"
edition = "2021"

[dependencies]
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.5.0" }
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "4ceefdfb74c1691dd009168f0c7aec3d746ef8b3" }
bincode = "1.3.3"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/0xPolygonHermez/zisk-patch-tiny-keccak.git", branch = "zisk" }

[features]
zisk = []
